add notes & slide

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <section>
           <h3>Problem 3</h3>
           <p><b>Collecting and curating open astronomy datasets</b> to facilitate data analysis and discovery.</p>
-          <aside class="notes">These problems (& more), are usually tackled daily by academics with very little formal computing training. But I think that the people in this room are better equiped to solve these problems -- even without the domain knowledge.</aside>
+
         </section>
 
         <section>
@@ -490,6 +490,11 @@
 
         <section>
           <img src="img/distributed_graphic.png" />
+        </section>
+
+        <section>
+          + many more problems like these!
+                    <aside class="notes">These problems (& more), are usually tackled daily by academics with very little formal computing training. But I think that the people in this room are better equiped to solve these problems -- even without the domain knowledge.</aside>
         </section>
 
         <section data-background="img/too_much_science.gif">
