--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </aside>
         </section>
 
-        <section source="https://upload.wikimedia.org/wikipedia/commons/1/14/Colbert_Presenting_the_Members_of_the_Royal_Academy_of_Sciences_to_Louis_XIV_in_1667.PNG" data-background="img/Colbert_Presenting_the_Members_of_the_Royal_Academy_of_Sciences_to_Louis_XIV_in_1667.PNG">
+        <section source="https://upload.wikimedia.org/wikipedia/commons/1/14/Colbert_Presenting_the_Members_of_the_Royal_Academy_of_Sciences_to_Louis_XIV_in_1667.png" data-background="img/Colbert_Presenting_the_Members_of_the_Royal_Academy_of_Sciences_to_Louis_XIV_in_1667.png">
           <aside class="notes">
               Welcome to the scientific revolution!<br />
               Colbert Presenting the Members of the Royal Academy of Sciences to Louis XIV in 1667.
